--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 .body{
+  
     font-family: 'Poppins', sans-serif;
 }
 .container{
@@ -10,28 +11,29 @@
     flex-wrap: wrap;
 }
 header{
+    margin-top: -13px;
     position: fixed;
     padding: 20px 0px;
     background-color:white;
-    border-bottom: 1px solid rgb(202, 200, 200);
+    border-bottom: 1px solid rgb(240, 236, 236);
     font: weight 700px;
     font-family:Verdana, Geneva, Tahoma, sans-serif
 }
 .header_logo{
     width: 15px;
     height: 15px;
-    padding-top: 5px;
+    padding-top: 7px;
     margin-left:8%;
 }
 .logo_support{
     margin-left:4px;
-    font-size: 18px;
+    font-size: 19px;
     padding-top: 3px;
     color: dodgerblue;
 }
 .header_nav{
     width: 1500px;
-    font-size: 12px;
+    font-size: 14px;
     margin-top: 8px;
     margin-left: 40%;
     margin-right: -1200em; 
@@ -64,4 +66,116 @@ header{
 }
 .part1 a:hover{
     background-color: black;
+}
+.part2{
+    padding-top: 15%;
+}
+.part2 .part2_1{
+    width: 55%;
+    margin-left:8%
+}
+.part2 .part2_2{
+    margin-left: -11%;
+}
+.part2_2 .listing{
+    margin-left: 0%;
+    font-size: 18px;
+    color:rgb(75, 74, 74);
+}
+.part2_2 h2{
+    font-size: 28px;
+    color: rgb(75, 74, 74);
+}
+.part2_2 p{
+    font-size: 18px;
+    color: rgb(75, 74, 74);
+}
+.part3{
+    padding-top: 10%;
+    text-align: center;
+    font-size: 22px;
+    color: rgb(61, 60, 60);
+}
+.part3 img{
+    width: 80%;
+    padding-bottom: 10px;
+}
+.part3 a{
+    text-decoration: none;
+    color: dodgerblue;
+    font-size: 18px;
+    text-align: center;
+    padding-top: 15px;
+}
+.part3 a:hover{
+    color: rgb(61, 61, 61);
+}
+.part4{
+    padding-top: 10%;
+    margin-left: 10%;
+    font-size: 19px;
+}
+.part4_2{
+    margin-left: 10%;
+    text-align: center;
+    border-radius: 4px;
+    border-top: 1px solid grey;
+    border-bottom: 1px solid grey;
+    border-left: 1px solid grey;
+    border-right: 1px solid grey;
+}
+.part4_2 h2{
+    font-size:40px;
+}
+.part4_2 p{
+    padding:0px 40px;
+}
+.part4_2 .p4_21{
+    border-right: 1px solid rgb(80, 78, 78);
+}
+.part4_2 .p4_22{
+    margin-left: 10%;
+}
+.part4 a{
+    text-decoration: none;
+    color: dodgerblue;
+    font-weight: 500;
+}
+.part4 a:hover{
+    color: rgb(82, 82, 82);
+}
+.part5_1{
+    padding-top: 10%;
+    margin-left: 10%;
+}
+.part5_2{
+    margin-left: 8%;
+    padding-top: 10%;
+    font-size: 18px;
+    color: rgb(61, 60, 60);
+}
+.part5_2 a{
+    text-decoration: none;
+    color: dodgerblue;
+    font-weight: 500;
+}
+.part5_2 a:hover{
+    color: rgb(82, 82, 82);
+}
+.open{
+    padding:8% 0%;
+    text-align: center;
+    color: rgb(61, 61, 61);
+    font-size: 20px;
+}
+.open a{
+    text-decoration: none;
+    font-size: 22px;
+    color: white;
+    background-color: dodgerblue;
+    padding: 10px 25px;
+    border-radius: 5px;
+}
+.open a:hover{
+    background-color: rgb(32, 32, 32);
 }
