--- a/style.css
+++ b/style.css
@@ -179,3 +179,48 @@ header{
 .open a:hover{
     background-color: rgb(32, 32, 32);
 }
+.foot{
+    background-color: rgb(248, 244, 244);
+    margin: 0px 0px;
+    padding-top: 20px;
+    border-top: 1px solid rgb(240, 236, 236);;
+}
+.foot1{
+    margin-left:10%;
+    padding-top: 18px;
+    width: 25%;
+}
+.foot2{
+    margin-left: -5%;
+}
+.foot3{
+    margin-left: 10%;
+}
+.foot4{
+    margin-left: 10%;
+}
+.foot a{
+    text-decoration: none;
+    font-size: 18px;
+    color: rgb(65, 64, 64); 
+}
+.foot a:hover{
+    color: dodgerblue;
+}
+.foot p{
+    font-size: 12px;
+    text-align: center;
+    font-stretch: expanded;
+    color: rgb(170, 170, 170);
+    margin-top: 5%;
+    padding: 0px 10%;
+}
+.last a{
+    padding: 15px 20px;
+    text-decoration: none;
+    font-size: 14px;
+    color: rgb(170, 170, 170); 
+}
+.last a:hover{
+    color: dodgerblue;
+}
